src/index.css
body {
  margin: 0;
  background-color: #2c2b34;
  font-family: "Titillium Web", sans-serif;
}

@import url("https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700&display=swap");

p,
h1,
h2,
h3 {
  padding: 0;
  margin: 0;
}

:root {
  --background-dark: #2c2b34;
  --background-medium: #363540;
  --background-light: #3d3c47;
  --background-hover: #403f4a;
  --primary: #e256a5;
  --secondary: #6565c4;
  --text-dark: #293441;
  --text-medium-dark: #929292;
  --text-medium: #a7a7a7;
  --text-light: #c2c2c2;
  --text-white: #fff;
  --ui-dark: #6a6975;
}

.container {
  width: 100vw;
  height: 100vh;
}

/* NAVBAR */

.navbar {
  width: 100%;
  height: 80px;
  background-color: var(--background-medium);
  position: fixed;
  z-index: 2;
}

.logo-container {
  display: inline-block;
  padding: 15px 0 15px 50px;
}

.app-logo {
  width: 1.45em;
  height: 1.45em;
  padding-right: 10px;
  display: inline-block;
}

.name {
  display: inline-block;
}

h1 {
  font-family: "Titillium Web", sans-serif;
  font-weight: 700;
  color: var(--text-light);
  margin: 0;
  font-size: 2em;
}

h3 {
  font-weight: 400;
  color: var(--text-light);
  margin: 0px 0px 30px 20px;
  color: var(--text-medium);
  text-transform: uppercase;
}
button:focus {
  outline: 0;
}

.nav-buttons {
  float: right;
  height: 80px;
  border: hidden;
  text-transform: capitalize;
  font-family: "Titillium Web", sans-serif;
  cursor: pointer;
}
.nav-buttons:on-hover {
  cursor: pointer;
}
.filters {
  /*background-color: var(--secondary);*/
  background-color: var(--secondary);
  width: 184px;
  color: var(--text-dark);
  font-size: 1.1em;
  transform: scale(1);
}
.filters:hover {
  background-color: #7575c8;
}

.filters:hover p {
  transform: scale(2);
}

.filter-icon {
  padding-right: 10px;
  height: 0.7em;
}

.suggest {
  background-color: var(--primary);
  width: 276px;
  color: var(--text-white);
  font-size: 1.2em;
  text-align: center;
}

.suggest:hover {
  background-color: #eb61af;

  transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.suggest p {
  transform: scale(1);
  transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.suggest:hover p {
  transform: scale(1.05);
  transition: transform 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
}

/* PAGE WRAPPER AND BACKGROUND */
.content {
  width: 100vw;
  height: calc(100vh - 80px);
  position: absolute;
  top: 80px;
  overflow-x: hidden;
}

.testdiv {
  width: 100%;
  height: 100%;
}
.image-container {
  overflow: hidden;
}
.background {
  position: absolute;
  top: 80px;
  width: 100%;
  height: calc(100vh - 80px);
  opacity: 0.05;
  /*opacity: 0.05;*/
  /*
  -webkit-filter: blur(4px);
  -moz-filter: blur(4px);
  -o-filter: blur(4px);
  -ms-filter: blur(4px);
  filter: blur(4px);
  */
  object-fit: cover;
}
/*
.background-fade-in {
  opacity: 1;
  transition: 3s;
}
*/
/*
.background-fade-out {
  opacity: 0;

  transition: 3s;
}

.background-fade-out-2 {
  opacity: 0;

  transition: 3s;
}
*/

/*
.background-fade-in {
  animation: background-fade-in 3s;
  animation-fill-mode: forwards;
}
*/

.background-fade-in {
  animation: background-fade-in 500ms;
  animation-fill-mode: forwards;
}

.background-fade-in-2 {
  animation: background-fade-in-2 500ms;
  animation-fill-mode: forwards;
}

.background-fade-out {
  animation: background-fade-out 500ms;
  animation-fill-mode: forwards;
}

.background-fade-out-2 {
  animation: background-fade-out-2 500ms;
  animation-fill-mode: forwards;
}

@keyframes background-fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 0.05;
  }
}

@keyframes background-fade-in-2 {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 0.05;
  }
}

@keyframes background-fade-out {
  0% {
    opacity: 0.05;
  }
  100% {
    opacity: 0;
  }
}

@keyframes background-fade-out-2 {
  0% {
    opacity: 0.05;
  }
  100% {
    opacity: 0;
  }
}

/*
.fade-enter {
  opacity: 0;
}
.fade-enter-active {
  opacity: 0.05;

  transition: opacity 1000ms;
}
.fade-enter-done {
  opacity: 0.05;
}
*/

.fetch-error-message {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateY(-50%);
  transform: translateX(-50%);

  z-index: 6;
  font-weight: 700;
  font-size: 3em;
  color: var(--text-medium-dark);
}

.trailer-error-message {
  font-weight: 700;
  font-size: 3em;
  color: var(--text-medium-dark);
  text-align: center;
  padding-top: 80px;
}

.grid {
  display: grid;
  grid-template-columns: 100%;
  height: calc(100vh - 80px);
  justify-items: center;
}

/* TITLE SECTION */

.info-content {
  display: relative;
  margin-top: 20vh;
  width: 50vw;
  opacity: 0;
  animation: opacity 1s;
  animation-fill-mode: forwards;
}
@keyframes opacity {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.genres {
  color: var(--secondary);
  margin-bottom: 10px;
}

.title-container {
}

.movie-title {
  color: var(--text-white);
  text-transform: uppercase;
  font-size: 3.5em;
  line-height: 0.9em;
  margin-bottom: 25px;
  display: inline-block;
}

.title {
  font-size: 0.9em;
  color: var(--text-medium-dark);
}

.release-year {
  margin-bottom: 3px;
  position: relative;
  width: 60px;
  height: 30px;
  background-color: rgba(68, 81, 85, 0.4);
  text-align: center;
  display: inline-block;
  border-radius: 100px;
}

.release-year-text {
  font-weight: 200;
  font-size: 0.3em;
  color: var(--text-medium);
  margin: 0;
  line-height: 0;
  position: absolute;
  top: 15px;
  left: 10px;
}

/* SCORE BAR */

.review-score {
  margin-bottom: 10px;
}
.bar-container {
  position: relative;
}

.bar-dark {
  position: absolute;
  top: 0px;

  width: 50vw;
  height: 30px;
  background-color: rgba(68, 81, 85, 0.4);
  opacity: 0.8;
  border-radius: 100px;
}

.bar-light {
  position: absolute;
  top: 0px;
  height: 30px;
  background-image: linear-gradient(to right, var(--secondary), #e256a5);
  opacity: 1;
  border-radius: 100px;
}
/* ... */

